src/main/java/com/example/restaurant/errors/details/InternalServerErrorDetails.java
package com.example.restaurant.errors.details;

public record InternalServerErrorDetails(
        String sourceMessage
) {
}
